# FBDS_Downloader

./: .gitignore  .pdm-python  Procfile  README.md  pyproject.toml  requirements.txt  settings.toml  setup.py
src/fbds_client/: counties.py  interface.py
src/fbds_downloader/: app.py  configs.py  converter.py  downloader.py  pipeline.py
tests/: main_test.py  workbench.ipynb
tests/test_data/APP/APP/: PR_4106902_APP.dbf  PR_4106902_APP.sbn  PR_4106902_APP.sbx  PR_4106902_APP_USO.shp
tests/test_data/APP_PR_CURITIBA/APP/: PR_4106902_APP.shp  PR_4106902_APP.shp.xml  PR_4106902_APP.shx  PR_4106902_APP_USO.dbf  PR_4106902_APP_USO.shp.xml  PR_4106902_APP_USO.shx
